[Bug] Prevent Conflicting Reservations (#91)
* Initial commit

* Added translations and frontend error catch

* Added tests to reach 90% jacoco coverage

* Applied copilot suggestions

* Apply suggestions from code review

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Applied copilot suggestions

* Apply suggestions from code review

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* - Applied copilot suggestions

* Update frontend/src/widgets/Media/Modals/ReserveMediaModal.tsx

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Fixed test

* Update webservice/src/test/java/com/envisionad/webservice/payment/businesslogiclayer/StripeServiceUnitTest.java

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* - Improved consistency of queries

* Added "APPROVED" and "PENDING" reservations to the validation to prevent conflicting reservations with those reservations

* Apply suggestions from code review

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

* Apply suggestions from code review

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>

---------

Co-authored-by: Copilot <175728472+Copilot@users.noreply.github.com>